--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@types/color": "^3.0.1",
     "color": "^3.1.2",
     "delta-e": "0.0.8",
     "nouislider": "^14.6.0",
