--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "@types/color": "^3.0.1",
+    "bulma": "^0.9.0",
     "color": "^3.1.2",
     "delta-e": "0.0.8",
     "nouislider": "^14.6.0",
