--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,7 @@
               "node_modules/bulma/css/bulma.min.css",
               "src/styles.css"
             ],
-            "scripts": [
-              "src/assets/palette.bundle.js"
-            ]
+            "scripts": []
           },
           "configurations": {
             "production": {
